# CS236

./: CMakeLists.txt  DLString.h  DataParser.cpp  DataParser.h  Domain.cpp  Expression.cpp  Expression.h  Facts.cpp  Facts.h  Grammar.cpp  Grammar.h  GrammarException.cpp  HeadPredicate.h  Id.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Operator.h  Predicate.h  Queries.cpp  Queries.h  Rule.h  Rules.cpp  Rules.h  Scheme.h  Schemes.cpp  Schemes.h  Utilities.cpp  Utilities.h  lab1  main.cpp
DataParser/: DataParser.cpp  DataParser.h  Facts.cpp  Facts.h  FiniteStateMachine.h  Grammar.cpp  Grammar.h  GrammarException.h  HeadPredicate.cpp  HeadPredicate.h  Id.cpp  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Operator.cpp  Operator.h  Predicate.cpp  Queries.h  Query.cpp  Scheme.cpp  Schemes.h
database/: DataParser.cpp  DataParser.h  Expression.cpp  Fact.cpp  Fact.h  Facts.cpp  Facts.h  Grammar.txt  Interpreter.cpp  Interpreter.h  LexicalAnalyzer.h  Parameter.h  Predicate.cpp  Predicate.h  Query.cpp  Query.h  Relation.cpp  Relation.h  Rule.cpp  Scheme.cpp  Schemes.cpp  main.cpp
lab4/: DLString.cpp  DataParser.cpp  DataParser.h  Domain.cpp  Domain.h  Fact.cpp  Fact.h  FiniteStateMachine.h  Grammar.h  HeadPredicate.cpp  HeadPredicate.h  Interpreter.cpp  Interpreter.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  Parameter.cpp  Predicate.cpp  Predicate.h  Queries.cpp  Queries.h  Query.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Rules.h  Scheme.cpp  Scheme.h  Schemes.cpp  Schemes.h  Utilities.h  main.cpp  main_dec.cpp  main_old.cpp
